Update dependabot configuration
Refactor to allow renovate updates to be auto-merged.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,12 +1,7 @@
 version: 2
 updates:
-- package-ecosystem: nuget
+- package-ecosystem: github-actions
   directory: "/"
   schedule:
     interval: yearly
     timezone: Europe/London
-  open-pull-requests-limit: 99
-  ignore:
-    - dependency-name: "AWSSDK.SQS"
-      update-types: ["version-update:semver-patch"]
-    - dependency-name: "Microsoft.AspNetCore.TestHost"
