--- a/src/AwsLambdaTestServer/MartinCostello.Testing.AwsLambdaTestServer.csproj
+++ b/src/AwsLambdaTestServer/MartinCostello.Testing.AwsLambdaTestServer.csproj
@@ -5,6 +5,8 @@
     <EnablePackageValidation>true</EnablePackageValidation>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <IsPackable>true</IsPackable>
+    <!-- TODO Fix later -->
+    <NoWarn>$(NoWarn);CA1873</NoWarn>
     <OutputType>Library</OutputType>
     <PackageId>MartinCostello.Testing.AwsLambdaTestServer</PackageId>
     <RootNamespace>MartinCostello.Testing.AwsLambdaTestServer</RootNamespace>
@@ -15,6 +17,6 @@
     <PackageReference Include="Microsoft.AspNetCore.TestHost" />
     <PackageReference Update="Microsoft.AspNetCore.TestHost" VersionOverride="[8.0.0,)" Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net8.0'))" />
     <PackageReference Update="Microsoft.AspNetCore.TestHost" VersionOverride="[9.0.0,)" Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net9.0'))" />
-    <PackageReference Update="Microsoft.AspNetCore.TestHost" VersionOverride="[10.0.0-preview.5.25277.114,)" Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net10.0'))" />
+    <PackageReference Update="Microsoft.AspNetCore.TestHost" VersionOverride="[10.0.0-preview.6.25358.103,)" Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net10.0'))" />
   </ItemGroup>
 </Project>
