--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,18 +67,11 @@ jobs:
       uses: actions/setup-dotnet@67a3573c9a986a3f9c594539f4ab511d57bb3ce9 # v4.3.1
       id: setup-dotnet
 
-    - name: Setup NuGet cache
-      uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
-      with:
-        path: ~/.nuget/packages
-        key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj', '**/*.props') }}
-        restore-keys: ${{ runner.os }}-nuget-
-
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@7474bc4690e29a8392af63c5b98e7449536d5c3a # v4.3.1
       if: |
         github.event.repository.fork == false &&
-        !contains('["costellobot[bot]", "dependabot[bot]", "github-actions[bot]", "renovate[bot]"]', github.actor)
+        !contains(fromJSON('["costellobot[bot]", "dependabot[bot]", "github-actions[bot]", "renovate[bot]"]'), github.event.pull_request.user.login)
       with:
         role-to-assume: arn:aws:iam::492538393790:role/github-actions-martincostello-lambda-test-server
         role-session-name: ${{ github.event.repository.name }}-${{ github.run_id }}-build
