--- a/src/AwsLambdaTestServer/MartinCostello.Testing.AwsLambdaTestServer.csproj
+++ b/src/AwsLambdaTestServer/MartinCostello.Testing.AwsLambdaTestServer.csproj
@@ -16,6 +16,6 @@
     <PackageReference Include="Microsoft.AspNetCore.TestHost" />
     <PackageReference Update="Microsoft.AspNetCore.TestHost" VersionOverride="[8.0.0,)" Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net8.0'))" />
     <PackageReference Update="Microsoft.AspNetCore.TestHost" VersionOverride="[9.0.0,)" Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net9.0'))" />
-    <PackageReference Update="Microsoft.AspNetCore.TestHost" VersionOverride="[10.0.0-preview.7.25380.108,)" Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net10.0'))" />
+    <PackageReference Update="Microsoft.AspNetCore.TestHost" VersionOverride="[10.0.0-rc.1.25451.107,)" Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net10.0'))" />
   </ItemGroup>
 </Project>
