--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -85,6 +85,7 @@ jobs:
           "version=${updatedVersion}" >> ${env:GITHUB_OUTPUT}
 
       - name: Import GPG private key
+        shell: bash
         env:
           GPG_PRIVATE_KEY: ${{ secrets.COSTELLOBOT_GPG_PRIVATE_KEY }}
         run: |
